halve finished refactor of server and client added gui